product_docs/docs/pgpool/4.3/02_extensions.mdx
---
title: "Installing and managing extensions"

legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/pgpool-ii/user-guides/pgpool-ii-guide/1.0/extensions.html"
---

<div id="extensions" class="registered_link"></div>

Modules in the extensions directory are additional features to EDB Postgres Advanced Server that are generally not included in the core database. Once loaded in a database, they can function just like built-in features. They allow you to use simple `SELECT` commands to use PCP remotely.

!!! Note
    EDB Pgpool-II extensions are delivered only for supported combinations of EDB Postgres Advanced Server versions and operating systems.

Before installing EDB Pgpool-II extensions, install the EDB Postgres Advanced Server on your host system.

## Installing EDB Pgpool-II extensions

To request credentials for the repository, visit [the EDB website](https://www.enterprisedb.com/user).

### Installing EDB Pgpool-II extensions on a CentOS/Rocky Linux/AlmaLinux host

Assume superuser privileges and perform the following steps to install EDB Pgpool-II extensions on a CentOS host:

1.  To install the repository configuration, assume superuser privileges, and invoke the platform-specific command:

    On CentOS 7:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

    On Rocky Linux 8 or AlmaLinux 8:

    ```text
    dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace the `USERNAME:PASSWORD` variable with the username and password of a registered EDB user:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Before installing EDB Pgpool-II, execute the following command to install the Extra Packages for Enterprise Linux (EPEL):

    On CentOS 7:

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

    On Rocky Linux 8 or AlmaLinux 8:

    ```text
    dnf -y install epel-release
    ```

4.  For Rocky Linux 8 or AlmaLinux 8, enable the PowerTools repository to satisfy EPEL package dependencies:

    ```text
    dnf config-manager --set-enabled PowerTools
    ```

5.  Use the platform-specific command to install EDB Pgpool-II extensions:

    On CentOS 7:

    ```text
    yum -y install edb-as<xx>-pgpool<yy>-extensions
    ```

    For example, to install Pgpool43 extensions for EDB Postgres Advanced Server 14, execute the following command:

    ```text
    yum -y install edb-as14-pgpool43-extensions
    ```

    On Rocky Linux 8 or AlmaLinux 8:

    ```text
    dnf install edb-as<xx>-pgpool<yy>-extensions
    ```

In the above command, `<xx>` is the EDB Postgres Advanced Server version, and `<yy>` is the EDB Pgpool-II extension version. The extensions will be available in the `/usr/edb/as<xx>/share/extension` directory.

<div id="installing_on_RHEL" class="registered_link"></div>

### Installing EDB Pgpool-II extensions on an RHEL host

Before installing the repository configuration, you must have credentials that allow access to the EDB repository. For information about requesting credentials, visit the [EDB website](https://www.enterprisedb.com/user).

Perform the following steps to install EDB Pgpool-II extensions on an RHEL host:

1.  To install the repository configuration, assume superuser privileges, and invoke the platform-specific command:

    On RHEL 7:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

    On RHEL 8:

    ```text
    dnf -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

2.  Replace the `USERNAME:PASSWORD` variable in the following command with the username and password of a registered EDB user:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

3.  Before installing EDB Pgpool-II, execute the following command to install the Extra Packages for Enterprise Linux (EPEL):

    On RHEL 7:

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

    On RHEL 8:

    ```text
    dnf -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
    ```

4.  Enable the repository:

       On RHEL 7, enable the `optional, extras`, and `HA` repositories to satisfy EPEL package dependencies:

    ```text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

       On RHEL 8, enable the `codeready-builder-for-rhel-8-*-rpms` repository to satisfy EPEL packages dependency:

    ```text
    ARCH=$( /bin/arch )

    subscription-manager repos --enable "codeready-builder-for-rhel-8-${ARCH}-rpms"
    ```

5.  Use the platform-specific command to install EDB Pgpool-II extensions:

    On RHEL 7:

    ```text
    yum -y install edb-as<xx>-pgpool<yy>-extensions
    ```

    For example, to install Pgpool43 extensions for EDB Postgres Advanced Server 14, execute the following command:

    ```text
    yum -y install edb-as13-pgpool43-extensions
    ```

    On RHEL 8:

    ```text
    dnf install edb-as<xx>-pgpool<yy>-extensions
    ```

In the above command, `<xx>` is the EDB Postgres Advanced Server version, and `<yy>` is the EDB Pgpool-II extension version. The extensions will be available in the `/usr/edb/as<xx>/share/extension` directory.

<div id="installing_on_ppcle" class="registered_link"></div>

### Installing EDB Pgpool-II extensions on an RHEL/CentOS 7 PPCLE host

Before installing the repository configuration, you must have credentials that allow access to the EDB repository. For information about requesting credentials, visit the [EDB website](https://www.enterprisedb.com/user).

Perform the following steps to install EDB Pgpool-II extensions on an RHEL/CentOS 7 PPC64LE Host:

1.  Install Advance Toolchain:

    ```text
    rpm --import https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7/gpg-pubkey-6976a827-5164221b

    cat > /etc/yum.repos.d/advance-toolchain.repo <<EOF

    # Beginning of the configuration file
    [advance-toolchain]
    name=Advance Toolchain IBM FTP
    baseurl=https://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHEL7
    failovermethod=priority
    enabled=1
    gpgcheck=1
    gpgkey=ftp://public.dhe.ibm.com/software/server/POWER/Linux/toolchain/at/redhat/RHELX/gpg-pubkey-6976a827-5164221b
    # End of the configuration file
    ```

2.  To install the repository configuration, assume superuser privileges, and invoke the following command:

    ```text
    yum -y install https://yum.enterprisedb.com/edbrepos/edb-repo-latest.noarch.rpm
    ```

3.  Replace the `USERNAME:PASSWORD` variable in the following command with the username and password of a registered EDB user:

    ```text
    sed -i "s@<username>:<password>@USERNAME:PASSWORD@" /etc/yum.repos.d/edb.repo
    ```

4.  Before installing EDB Pgpool-II, execute the following command to install the Extra Packages for Enterprise Linux (EPEL):

    ```text
    yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
    ```

5.  On RHEL 7, enable the `optional, extras`, and `HA` repositories to satisfy EPEL package dependencies:

    ```text
    subscription-manager repos --enable "rhel-*-optional-rpms" --enable "rhel-*-extras-rpms"  --enable "rhel-ha-for-rhel-*-server-rpms"
    ```

6.  Invoke the following command to install EDB Pgpool-II extensions:

    ```text
    yum -y install edb-as13-pgpool<xx>-extensions
    ```

    Where &lt;xx> is the EDB Pgpool-II version you want to install.

<div id="installing_pgpool_extensions_on_a_debian_or_ubuntu_host" class="registered_link"></div>

### Installing EDB Pgpool-II extensions on a Debian/Ubuntu host

To install EDB Pgpool-II extensions on a Debian or Ubuntu host, you must have credentials that allow access to the EDB repository. To request credentials for the repository, visit the [EDB website](https://www.enterprisedb.com/user).

The following steps walk you through using the EDB apt repository to install a DEB package.

1.  Assume superuser privileges:

    ```text
    sudo su –
    ```

2.  Configure the EDB repository. Substitute your EDB credentials for the `username` and `password` placeholders in the following command:

    On Debian 9 and Ubuntu 18:

    ```text
    sh -c 'echo "deb https://username:password@apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    ```

    On Debian 10:

    a.  Set up the EDB repository:

    ```text
    sh -c 'echo "deb [arch=amd64] https://apt.enterprisedb.com/$(lsb_release -cs)-edb/ $(lsb_release -cs) main" > /etc/apt/sources.list.d/edb-$(lsb_release -cs).list'
    ```

    b.  Substitute your EDB credentials for the `username` and `password` placeholders in the following command:

    ```text
    sh -c 'echo "machine apt.enterprisedb.com login <username> password <password>" > /etc/apt/auth.conf.d/edb.conf'
    ```

3.  Add support to your system for secure APT repositories:

    ```text
    apt-get install apt-transport-https
    ```

4.  Add the EDB signing key:

    ```text
    wget -q -O - https://apt.enterprisedb.com/edb-deb.gpg.key | apt-key add -
    ```

5.  Update the repository metadata:

    ```text
    apt-get update
    ```

6.  Install the Debian package:

    ```text
    apt-get install -y edb-as<xx>-pgpool<yy>-extensions
    ```

    In the above command, `<xx>` is the EDB Postgres Advanced Server version, and `<yy>` is the EDB Pgpool-II extension version you want to install.

<div id="installing_extensions_using_the_SLES_host" class="registered_link"></div>

### Installing EDB Pgpool-II extensions on an SLES 12 x86_64 host

You can use the Zypper package manager to install the EDB Pgpool-II extension on an SLES 12 host. Zypper will attempt to satisfy package dependencies as it installs a package but requires access to specific repositories that are not hosted at EDB.

1.  Assume superuser privileges.

    ```text
    sudo su -
    ```

2.  Use the following command to add the EDB repository to your SLES host:

    ```text
    zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo
    ```

4.  Install `SUSEConnect` to register the host with SUSE to allow access to SUSE repositories:

    ```text
    zypper install SUSEConnect
    ```

5.  Register the host with SUSE to allow access to SUSE repositories and replace `'REGISTRATION_CODE'` and `'EMAIL'` with your SUSE registration information:

    ```text
    SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'
    SUSEConnect -p PackageHub/12.5/x86_64
    SUSEConnect -p sle-sdk/12.5/x86_64
    ```

6.  Refresh the metadata:

    ```text
    zypper refresh
    ```

7.  Then, use the Zypper utility to install EDB Pgpool-II extension:

    ```text
    zypper -n install edb-as<xx>-pgpool<yy>-extensions
    ```

    Where &lt;xx> is the EDB Postgres Advanced Server version and &lt;yy> is the EDB Pgpool-II version you wish to install.

### Installing EDB Pgpool-II extensions on an SLES 15 x86-64 host

!!! note
    Supported on EDB Pgpool-II 4.3 and later.

There are two steps to completing an installation:

- Setting up the repository
- Installing the package

For each step, you must be logged in as superuser.

```shell
# To log in as a superuser:
sudo su -
```

Before setting up the repository, you need to register with EDB. To receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

#### Setting up the repository

Setting up the repository is a one time task. If you have already set up your repository, you do not need to perform these steps.

```shell
# Install the repository configuration and enter your EDB repository 
# credentials when prompted
zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo

# Install SUSEConnect to register the host with SUSE, allowing access to 
# SUSE repositories
zypper install SUSEConnect

# Register the host with SUSE, allowing access to SUSE repositories
# Replace 'REGISTRATION_CODE' and 'EMAIL' with your SUSE registration 
# information
SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'

# Activate the required SUSE module
SUSEConnect -p PackageHub/15.3/x86_64

# Refresh the metadata
zypper refresh
```

#### Installing the package

```shell
zypper -n install edb-as<xx>-pgpool<yy>-extensions
```

Where &lt;xx> is the EDB Postgres Advanced Server version and &lt;yy> is the EDB Pgpool-II version you wish to install.


### Installing EDB Pgpool-II extensions on an SLES 12 ppc64le host

!!! note
    Supported on EDB Pgpool-II Extension 4.3 and later.

There are two steps to completing an installation:

- Setting up the repository
- Installing the package


For each step, you must be logged in as superuser.

```shell
# To log in as a superuser:
sudo su -
```

Before setting up the repository, you need to register with EDB. To receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

#### Setting up the repository

Setting up the repository is a one time task. If you have already set up your repository, you do not need to perform these steps.

```shell
# Install the repository configuration and enter your EDB repository 
# credentials when prompted
zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo

# Install SUSEConnect to register the host with SUSE, allowing access to 
# SUSE repositories
zypper install SUSEConnect

# Register the host with SUSE, allowing access to SUSE repositories
# Replace 'REGISTRATION_CODE' and 'EMAIL' with your SUSE registration 
# information
SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'

# Activate the required SUSE modules
SUSEConnect -p PackageHub/12.5/ppc64le
SUSEConnect -p sle-sdk/12.5/ppc64le

# Refresh the metadata
zypper refresh
```

#### Installing the package

```shell
zypper -n install edb-as<xx>-pgpool<yy>-extensions
```

Where &lt;xx> is the EDB Postgres Advanced Server version and &lt;yy> is the EDB Pgpool-II version you wish to install.

### Installing EDB Pgpool-II extensions on an SLES 15 ppc64le host

!!! note
    Supported on EDB Pgpool-II 4.3 and later.

There are two steps to completing an installation:

- Setting up the repository
- Installing the package

For each step, you must be logged in as superuser.

```shell
# To log in as a superuser:
sudo su -
```

Before setting up the repository, you need to register with EDB. To receive credentials for the EDB repository, visit: [Repository Access Request](https://www.enterprisedb.com/repository-access-request).

#### Setting up the repository

Setting up the repository is a one time task. If you have already set up your repository, you do not need to perform these steps.

```shell
# Install the repository configuration and enter your EDB repository 
# credentials when prompted
zypper addrepo https://zypp.enterprisedb.com/suse/edb-sles.repo

# Install SUSEConnect to register the host with SUSE, allowing access to 
# SUSE repositories
zypper install SUSEConnect

# Register the host with SUSE, allowing access to SUSE repositories
# Replace 'REGISTRATION_CODE' and 'EMAIL' with your SUSE registration 
# information
SUSEConnect -r 'REGISTRATION_CODE' -e 'EMAIL'

# Activate the required SUSE module
SUSEConnect -p PackageHub/15.3/ppc64le

# Refresh the metadata
zypper refresh
```

#### Installing the package

```shell
zypper -n install edb-as<xx>-pgpool<yy>-extensions
```

Where &lt;xx> is the EDB Postgres Advanced Server version and &lt;yy> is the EDB Pgpool-II version you wish to install.

<div id="using_linux_installer" class="registered_link"></div>

### Installing EDB Pgpool-II extensions using the Linux graphical installer

 Graphical installers for EDB Pgpool-II extensions are available via StackBuilder Plus (for EDB Postgres Advanced Server hosts) or Stack Builder (on PostgreSQL hosts). You can access StackBuilder Plus through your Linux start menu. It is not supported on Windows.

 Perform the following steps to install EDB Pgpool-II extensions:

1.  Open StackBuilder Plus and select your EDB Postgres Advanced Server installation from the drop-down list on the `Welcome` window. Click `Next` to continue to the application selection page.

2. Expand the `Add-ons, tools and utilities` node, and check the box next to the EDB Pgpool-II extension to select and download the installer. Click `Next` to continue.

3. Provide the credentials and click `Next`.

4.  The selected packages and the default download directory where the package will be installed are displayed; change the download directory location if required. Click `Next`.

5.  Once you have downloaded the installation files, a confirmation message is displayed. Click `Next` to start the installation.

6.  Select an installation language and click `OK`.

7.  The EDB Pgpool-II extensions installer welcomes you to the setup wizard.

    ![The EDB Pgpool-II Extensions Welcome window](images/pg1.png)

    Fig. 1: The EDB Pgpool-II Extensions Welcome window

8.  Use the `Installation Directory` field to specify the directory in which you wish to install the EDB Pgpool-II extensions software (the default installation directory is `/opt/edb/as<xx>`) Then, click `Next` to continue.

    ![The EDB Pgpool-II Extensions Installation Details Window](images/pg2.png)

    Fig. 2: The EDB Pgpool-II Extensions Installation Details Window

9.  The `Ready to Install` window notifies you when the installer has all of the information needed to install EDB Pgpool-II extensions on your system. Click `Next` to install EDB Pgpool-II extensions.

    ![The Ready to Install window](images/pg3.png)

    Fig. 3: The Ready to Install window

10.  Progress bars inform you as the installation progresses.

    ![The installation progresses](images/pg4.png)

    Fig. 4: The installation progresses

11.  The installer notifies you when the setup wizard has completed the EDB Pgpool-II installation. Click `Finish` to exit the installer.

    ![The installation is complete](images/pg5.png)

    Fig. 5: The installation is complete

12. The extensions will be available in the `/opt/edb/as<xx>/share/extension/pgpool*` directory.

## Creating EDB Pgpool-II extensions

You must install and create the extensions in each database where you will be using EDB Pgpool-II functionality. To ensure all extensions are available for future databases, you can add the extension to the `template1` database; any extensions installed in the `template1` database will be created in each of the databases that uses `template1` as a template during creation.

**Pgpool_adm Extension**

<div id="pgpool_adm" class="registered_link"></div>

`Pgpool_adm` is a set of extensions that allows SQL access to PCP commands. To view information about PCP commands, see <https://www.pgpool.net/docs/latest/en/html/pcp-commands.html>.
   
After installing the `Pgpool_adm` extension, use the psql client application to connect to the database, and execute the following SQL command:

```text
CREATE EXTENSION pgpool_adm;
```

To view more information about `Pgpool_adm`, see <https://www.pgpool.net/docs/latest/en/html/pgpool-adm.html>.

**Pgpool_recovery Extension**

<div id="pgpool_recovery" class="registered_link"></div>

The `Pgpool_recovery` extension is required for online recovery and future fail-back mechanisms.

After installing the `Pgpool_recovery` extension, use psql to connect to the database, and execute the following SQL command to create a `Pgpool_recovery` extension:

```text
CREATE EXTENSION pgpool_recovery;
```

For more information about using the `CREATE EXTENSION` command, see the [PostgreSQL core documentation](https://www.postgresql.org/docs/current/static/sql-createextension.html).
